# quasidiffusion

./: quasidiffusion.cabal
benchmark/: Bench.hs  QuasidiffusionBench.hs
main/: Main.hs
test-suite/: DocTest.hs  HLint.hs  QuasidiffusionSpec.hs
