name:           quasidiffusion
version:        0.0.0
build-type:     Simple
cabal-version:  >= 1.16
copyright:      2014 Octavian Geagla
license:        MIT
synopsis:       Quasidiffusion

flag documentation
        default: False

library
        if flag(documentation)
           build-depends: hscolour == 1.20.*
        default-language:       Haskell2010
        exposed-modules:        Quasidiffusion
        hs-source-dirs:         library
        build-depends:          base, repa == 3.2.*, repa-io == 3.2.*
        ghc-options:            -XTypeOperators
        ghc-prof-options:
                                -auto-all
                                -prof


executable quasidiffusion
        build-depends:          base, quasidiffusion, repa == 3.2.*, repa-io == 3.2.*
        ghc-options:            -XTypeOperators
        default-language:       Haskell2010
        hs-source-dirs:         main
        main-is:                Main.hs
        ghc-prof-options:
                                -auto-all
                                -prof

test-suite hspec
        ghc-options:            -fhpc -XTypeOperators
        build-depends:          base, quasidiffusion, hspec == 1.8.*, repa == 3.2.*, repa-io == 3.2.*
        default-language:       Haskell2010
        hs-source-dirs:         test-suite library
        main-is:                Spec.hs
        type:                   exitcode-stdio-1.0
        other-modules:          Quasidiffusion, QuasidiffusionSpec

benchmark criterion
        build-depends:          base, quasidiffusion, criterion == 0.8.*
        default-language:       Haskell2010
        hs-source-dirs:         benchmark
        main-is:                Bench.hs
        type:                   exitcode-stdio-1.0

test-suite doctest
        build-depends:          base, doctest == 0.9.*, Glob == 0.7.*
        ghc-options:            -XTypeOperators
        default-language:       Haskell2010
        hs-source-dirs:         test-suite
        main-is:                DocTest.hs
        type:                   exitcode-stdio-1.0

test-suite haddock
        build-depends:          base, process == 1.1.*, regex-compat == 0.95.*        
        default-language:       Haskell2010
        hs-source-dirs:         test-suite
        main-is:                Haddock.hs
        type:                   exitcode-stdio-1.0
        ghc-options:            -XTypeOperators

test-suite hpc
        build-depends:          base, process == 1.1.*, regex-compat == 0.95.*
        default-language:       Haskell2010
        hs-source-dirs:         test-suite
        main-is:                HPC.hs
        type:                   exitcode-stdio-1.0

test-suite hlint
        build-depends:           base, hlint == 1.8.*
        default-language:        Haskell2010
        hs-source-dirs:          test-suite
        main-is:                 HLint.hs
        type:                    exitcode-stdio-1.0

